feat(main): middleware cors and rate limiting configured

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,41 @@
+# App
 APP_ENV=development
 PORT=8080
+
+# HTTP Server
+SHUTDOWN_SECS=10
+READ_HEADER_TIMEOUT_SECS=5
+READ_TIMEOUT_SECS=15
+WRITE_TIMEOUT_SECS=15
+IDLE_TIMEOUT_SECS=60
+MAX_HEADER_BYTES=1048576
+
+# CORS
+CORS_ALLOW_ORIGINS=http://localhost:3000,http://localhost:5173
+CORS_ALLOW_METHODS=GET,POST,PUT,PATCH,DELETE,OPTIONS
+CORS_ALLOW_HEADERS=Origin,Content-Type,Accept,Authorization,X-Request-ID
+CORS_EXPOSE_HEADERS=X-Request-ID
+CORS_ALLOW_CREDENTIALS=false
+CORS_MAX_AGE=86400
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_RPS=100
+RATE_LIMIT_BURST=200
+
+# Security Headers
+SECURITY_HEADERS_ENABLED=true
+X_FRAME_OPTIONS=DENY
+CONTENT_TYPE_NOSNIFF=true
+XSS_PROTECTION=true
+
+# Compression
+COMPRESSION_ENABLED=true
+COMPRESSION_LEVEL=5
+
+# Request Limits
+MAX_BODY_SIZE=10485760
+REQUEST_TIMEOUT_SECS=30
+
+# Trusted Proxies (comma separated)
+TRUSTED_PROXIES=
