--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,15 @@ ACME_EMAIL=admin@example.com
 JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRATION_MINS=15
 JWT_REFRESH_EXPIRATION_DAYS=7
+
+# Payment Providers
+PAYMENT_DEFAULT_PROVIDER=wompi
+
+# Wompi Configuration
+WOMPI_PUBLIC_KEY=pub_test_your_public_key_here
+WOMPI_PRIVATE_KEY=prv_test_your_private_key_here
+WOMPI_WEBHOOK_SECRET=your_webhook_secret_here
+
+# Stripe Configuration (opcional)
+STRIPE_API_KEY=sk_test_your_stripe_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
