--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,5 @@ WOMPI_WEBHOOK_SECRET=your_webhook_secret_here
 # Stripe Configuration (opcional)
 STRIPE_API_KEY=sk_test_your_stripe_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+FIREBASE_CREDENTIALS_PATH=/secrets/firebase.json
