feat(payment): configuration for wompi

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ PAYMENT_DEFAULT_PROVIDER=wompi
 WOMPI_PUBLIC_KEY=pub_test_your_public_key_here
 WOMPI_PRIVATE_KEY=prv_test_your_private_key_here
 WOMPI_WEBHOOK_SECRET=your_webhook_secret_here
+WOMPI_REDIRECT_URL=http://localhost:3000/payment/result
 
 # Stripe Configuration (opcional)
 STRIPE_API_KEY=sk_test_your_stripe_key_here
