--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,19 @@ STRIPE_API_KEY=sk_test_your_stripe_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 FIREBASE_CREDENTIALS_PATH=/secrets/firebase.json
+
+# Business Rules
+APPOINTMENT_START_HOUR=8
+APPOINTMENT_END_HOUR=18
+TENANT_TRIAL_DAYS=14
+SCHEDULER_INTERVAL_MINS=15
+
+# Redis Cache (optional - for RBAC caching)
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+
+# Rate Limiting (per-tenant)
+RATE_LIMIT_TENANT_RPS=50
+RATE_LIMIT_TENANT_BURST=100
+RATE_LIMIT_GLOBAL_RPS=1000
+RATE_LIMIT_GLOBAL_BURST=2000
